Bug 1319744 - Ensure that progress events and corresponding LOADING readystatechanges fire as per spec. r=baku a=jcristau